updated chat box

--- a/index.html
+++ b/index.html
@@ -74,7 +74,11 @@
                 <p class="inviteButton">+</p>
             </div>
         </div>
-        <div class="container"></div>
+        <div class="container">
+            <div class="chatBox">
+                <p class="chatText">message #general</p>
+            </div>
+        </div>
         <div class="members"></div>
     </div>
 </body>
