--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <div class="navguild">
                         <div class="guild-opener">
                             <div class="navGuildItems">
-                                <h4 class="guildSelectorName">Server Name</h4>
+                                <h4 class="guildSelectorName">Discord Disorder</h4>
                             </div>
                         </div>
                     </div>
@@ -27,8 +27,8 @@
             <div class="userBox">
                 <img src="https://cdn.discordapp.com/embed/avatars/0.png" alt="avatar" class="userAvatar">
                 <div class="userinfo">
-                    <h4 class="username">Username</h4>
-                    <h6 class="discriminator">#1234</h6>
+                    <h4 class="username">sonas939</h4>
+                    <h6 class="discriminator">#456</h6>
                 </div>
                 <div class="usermenuicons">
                     <div class="mic" id="micToggle"></div>
@@ -79,7 +79,9 @@
                 <p class="chatText">message #general</p>
             </div>
         </div>
-        <div class="members"></div>
+        <div class="thread">
+            <h4 class="guildSelectorName">Thread</h4>
+        </div>
     </div>
 </body>
 
