changing the bottom text to input box

--- a/index.html
+++ b/index.html
@@ -75,8 +75,12 @@
             </div>
         </div>
         <div class="container">
-            <div class="chatBox">
+            <!-- <div class="chatBox">
                 <p class="chatText">message #general</p>
+            </div>
+            // turn the chat box into a textbox matching the same style -->
+            <div class="chatBox">
+                <input type="text" class="chatText" placeholder="message #general">
             </div>
         </div>
         <div class="thread">
