--- a/index.html
+++ b/index.html
@@ -94,7 +94,117 @@
             </div>
             // turn the chat box into a textbox matching the same style -->
                 <div class="chatContainer">
-                    <div class="chatMessages"></div>
+                    <div class="chatMessages">
+                        <div class="message" id="message1">
+                            <div class="server">
+                                <img
+                                    class="servericon"
+                                    src="https://cdn.discordapp.com/embed/avatars/2.png"
+                                />
+                            </div>
+                            <div class="content">
+                                <div class="nameDate">
+                                    <div class="name">
+                                        <p>Tristan Nigos</p>
+                                    </div>
+                                    <div class="date">
+                                        <p>Today at 5:04pm</p>
+                                    </div>
+                                </div>
+                                <div class="text">
+                                    <p>
+                                        hellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohello
+                                        hellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohello
+                                    </p>
+                                </div>
+                                <div class="view">
+                                    <button>View Thread</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="message" id="message1">
+                            <div class="server">
+                                <img
+                                    class="servericon"
+                                    src="https://cdn.discordapp.com/embed/avatars/2.png"
+                                />
+                            </div>
+                            <div class="content">
+                                <div class="nameDate">
+                                    <div class="name">
+                                        <p>Tristan Nigos</p>
+                                    </div>
+                                    <div class="date">
+                                        <p>Today at 5:04pm</p>
+                                    </div>
+                                </div>
+                                <div class="text">
+                                    <p>
+                                        hellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohello
+                                        hellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohello
+                                    </p>
+                                </div>
+                                <div class="view">
+                                    <button>View Thread</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="message" id="message1">
+                            <div class="server">
+                                <img
+                                    class="servericon"
+                                    src="https://cdn.discordapp.com/embed/avatars/2.png"
+                                />
+                            </div>
+                            <div class="content">
+                                <div class="nameDate">
+                                    <div class="name">
+                                        <p>Tristan Nigos</p>
+                                    </div>
+                                    <div class="date">
+                                        <p>Today at 5:04pm</p>
+                                    </div>
+                                </div>
+                                <div class="text">
+                                    <p>
+                                        hellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohello
+                                        hellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohello
+                                    </p>
+                                </div>
+                                <div class="view">
+                                    <button>View Thread</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="message" id="message1">
+                            <div class="server">
+                                <img
+                                    class="servericon"
+                                    src="https://cdn.discordapp.com/embed/avatars/2.png"
+                                />
+                            </div>
+                            <div class="content">
+                                <div class="nameDate">
+                                    <div class="name">
+                                        <p>Tristan Nigos</p>
+                                    </div>
+                                    <div class="date">
+                                        <p>Today at 5:04pm</p>
+                                    </div>
+                                </div>
+                                <div class="text">
+                                    <p>
+                                        hellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohello
+                                        hellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohello
+                                    </p>
+                                </div>
+                                <div class="view">
+                                    <button>View Thread</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="chatBox">
                         <input type="text" class="chatText" placeholder="message #general" />
                     </div>
@@ -104,7 +214,9 @@
                 <div class="threadTitle">
                     <h4 class="guildSelectorName">Thread</h4>
                 </div>
-                <div class="threadMessages"></div>
+                <div class="threadMessages">
+                    
+                </div>
                 <div class="chatBox">
                     <input type="text" class="threadText" placeholder="message #general" />
                 </div>
