more display config

--- a/index.html
+++ b/index.html
@@ -113,8 +113,9 @@
                                 </div>
                                 <div class="text">
                                     <p>
-                                        hellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohello
-                                        hellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohello
+                                        Has anyone thought much yet about the temperature queries HW? It's not clear how we can do the performQuery 
+                                        function since we need to iterate through the linkedList and It seems we need access to the head Node, but
+                                        that is private in LinkedList and we're not supposed to use getHead()?
                                     </p>
                                 </div>
                                 <div class="view">
@@ -141,8 +142,8 @@
                                 </div>
                                 <div class="text">
                                     <p>
-                                        hellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohello
-                                        hellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohello
+                                        How are you supposed to throw and catch the exceptions in the User and Post constructors of Hello CPPeers?
+                                        I tried looking at the reference for invalid_argument but it confused me more.
                                     </p>
                                 </div>
                                 <div class="view">
@@ -168,8 +169,9 @@
                                 </div>
                                 <div class="text">
                                     <p>
-                                        hellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohello
-                                        hellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohello
+                                        What flags do we need to compile with for the warnings requirement?
+                                        I tried using the flags from a previous assignment and it throws warnings about the 
+                                        struct having pointers which were there in the starter files.
                                     </p>
                                 </div>
                                 <div class="view">
@@ -195,8 +197,9 @@
                                 </div>
                                 <div class="text">
                                     <p>
-                                        hellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohello
-                                        hellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohello
+                                        Is anyone else's copy constructor being weird?
+                                        As I work on my other functions the test for that keeps
+                                        alternating between passing/failing even though I'm not editing it at all.
                                     </p>
                                 </div>
                                 <div class="view">
@@ -215,7 +218,31 @@
                     <h4 class="guildSelectorName">Thread</h4>
                 </div>
                 <div class="threadMessages">
-                    
+                    <div class="message" id="message1">
+                        <div class="server">
+                            <img
+                                class="servericon"
+                                src="https://cdn.discordapp.com/embed/avatars/2.png"
+                            />
+                        </div>
+                        <div class="content">
+                            <div class="nameDate">
+                                <div class="name">
+                                    <p>Tristan Nigos</p>
+                                </div>
+                                <div class="date">
+                                    <p>Today at 5:04pm</p>
+                                </div>
+                            </div>
+                            <div class="text">
+                                <p>
+                                    Has anyone thought much yet about the temperature queries HW? It's not clear how we can do the performQuery 
+                                        function since we need to iterate through the linkedList and It seems we need access to the head Node, but
+                                        that is private in LinkedList and we're not supposed to use getHead()?
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="chatBox">
                     <input type="text" class="threadText" placeholder="message #general" />
