--- a/index.html
+++ b/index.html
@@ -113,18 +113,20 @@
                                 </div>
                                 <div class="text">
                                     <p>
-                                        Has anyone thought much yet about the temperature queries HW? It's not clear how we can do the performQuery 
-                                        function since we need to iterate through the linkedList and It seems we need access to the head Node, but
-                                        that is private in LinkedList and we're not supposed to use getHead()?
+                                        Has anyone thought much yet about the temperature queries
+                                        HW? It's not clear how we can do the performQuery function
+                                        since we need to iterate through the linkedList and It seems
+                                        we need access to the head Node, but that is private in
+                                        LinkedList and we're not supposed to use getHead()?
                                     </p>
                                 </div>
                                 <div class="view">
-                                    <button>View Thread</p>
+                                    <button>View Thread</button>
                                 </div>
                             </div>
                         </div>
 
-                        <div class="message" id="message1">
+                        <div class="message" id="message2">
                             <div class="server">
                                 <img
                                     class="servericon"
@@ -142,12 +144,14 @@
                                 </div>
                                 <div class="text">
                                     <p>
-                                        How are you supposed to throw and catch the exceptions in the User and Post constructors of Hello CPPeers?
-                                        I tried looking at the reference for invalid_argument but it confused me more.
+                                        How are you supposed to throw and catch the exceptions in
+                                        the User and Post constructors of Hello CPPeers? I tried
+                                        looking at the reference for invalid_argument but it
+                                        confused me more.
                                     </p>
                                 </div>
                                 <div class="view">
-                                    <button>View Thread</p>
+                                    <button>View Thread</button>
                                 </div>
                             </div>
                         </div>
@@ -169,13 +173,14 @@
                                 </div>
                                 <div class="text">
                                     <p>
-                                        What flags do we need to compile with for the warnings requirement?
-                                        I tried using the flags from a previous assignment and it throws warnings about the 
-                                        struct having pointers which were there in the starter files.
+                                        What flags do we need to compile with for the warnings
+                                        requirement? I tried using the flags from a previous
+                                        assignment and it throws warnings about the struct having
+                                        pointers which were there in the starter files.
                                     </p>
                                 </div>
                                 <div class="view">
-                                    <button>View Thread</p>
+                                    <button>View Thread</button>
                                 </div>
                             </div>
                         </div>
@@ -197,13 +202,14 @@
                                 </div>
                                 <div class="text">
                                     <p>
-                                        Is anyone else's copy constructor being weird?
-                                        As I work on my other functions the test for that keeps
-                                        alternating between passing/failing even though I'm not editing it at all.
+                                        Is anyone else's copy constructor being weird? As I work on
+                                        my other functions the test for that keeps alternating
+                                        between passing/failing even though I'm not editing it at
+                                        all.
                                     </p>
                                 </div>
                                 <div class="view">
-                                    <button>View Thread</p>
+                                    <button>View Thread</button>
                                 </div>
                             </div>
                         </div>
@@ -236,9 +242,11 @@
                             </div>
                             <div class="text">
                                 <p>
-                                    Has anyone thought much yet about the temperature queries HW? It's not clear how we can do the performQuery 
-                                        function since we need to iterate through the linkedList and It seems we need access to the head Node, but
-                                        that is private in LinkedList and we're not supposed to use getHead()?
+                                    Has anyone thought much yet about the temperature queries HW?
+                                    It's not clear how we can do the performQuery function since we
+                                    need to iterate through the linkedList and It seems we need
+                                    access to the head Node, but that is private in LinkedList and
+                                    we're not supposed to use getHead()?
                                 </p>
                             </div>
                         </div>
