adding thread displaying

--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@
                                     </p>
                                 </div>
                                 <div class="view">
-                                    <button>View Thread</button>
+                                    <button id="messagebutton1" onclick="togglediv(1)">
+                                        View Thread
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -151,7 +153,9 @@
                                     </p>
                                 </div>
                                 <div class="view">
-                                    <button>View Thread</button>
+                                    <button id="messagebutton2" onclick="togglediv(2)">
+                                        View Thread
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -180,7 +184,9 @@
                                     </p>
                                 </div>
                                 <div class="view">
-                                    <button>View Thread</button>
+                                    <button id="messagebutton3" onclick="togglediv(3)">
+                                        View Thread
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -209,7 +215,9 @@
                                     </p>
                                 </div>
                                 <div class="view">
-                                    <button>View Thread</button>
+                                    <button id="messagebutton4" onclick="togglediv(4)">
+                                        View Thread
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -224,7 +232,7 @@
                     <h4 class="guildSelectorName">Thread</h4>
                 </div>
                 <div class="threadMessages">
-                    <div class="message" id="message1">
+                    <!-- <div class="message" id="message1">
                         <div class="server">
                             <img
                                 class="servericon"
@@ -250,7 +258,7 @@
                                 </p>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="chatBox">
                     <input type="text" class="threadText" placeholder="message #general" />
