avatar and names

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             <div class="content">
                                 <div class="nameDate">
                                     <div class="name">
-                                        <p>Tristan Nigos</p>
+                                        <p>Sona Shah</p>
                                     </div>
                                     <div class="date">
                                         <p>Today at 5:04pm</p>
@@ -136,7 +136,7 @@
                             <div class="server">
                                 <img
                                     class="servericon"
-                                    src="https://cdn.discordapp.com/embed/avatars/2.png"
+                                    src="https://cdn.discordapp.com/embed/avatars/3.png"
                                 />
                             </div>
                             <div class="content">
@@ -145,7 +145,7 @@
                                         <p>Tristan Nigos</p>
                                     </div>
                                     <div class="date">
-                                        <p>Today at 5:04pm</p>
+                                        <p>Today at 5:15pm</p>
                                     </div>
                                 </div>
                                 <div class="text">
@@ -167,16 +167,16 @@
                             <div class="server">
                                 <img
                                     class="servericon"
-                                    src="https://cdn.discordapp.com/embed/avatars/2.png"
+                                    src="https://cdn.discordapp.com/embed/avatars/4.png"
                                 />
                             </div>
                             <div class="content">
                                 <div class="nameDate">
                                     <div class="name">
-                                        <p>Tristan Nigos</p>
+                                        <p>Adam Sulemanji</p>
                                     </div>
                                     <div class="date">
-                                        <p>Today at 5:04pm</p>
+                                        <p>Today at 5:23pm</p>
                                     </div>
                                 </div>
                                 <div class="text">
@@ -198,7 +198,7 @@
                             <div class="server">
                                 <img
                                     class="servericon"
-                                    src="https://cdn.discordapp.com/embed/avatars/2.png"
+                                    src="https://cdn.discordapp.com/embed/avatars/3.png"
                                 />
                             </div>
                             <div class="content">
@@ -207,7 +207,7 @@
                                         <p>Tristan Nigos</p>
                                     </div>
                                     <div class="date">
-                                        <p>Today at 5:04pm</p>
+                                        <p>Today at 5:51pm</p>
                                     </div>
                                 </div>
                                 <div class="text">
